# esm-fullstack-challenge

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
dashboard/: .dockerignore  Dockerfile  Makefile  README.md  index.html  package.json
dashboard/public/: manifest.json
dashboard/src/: App.tsx  authProvider.ts  dataProvider.ts
dashboard/src/components/: RacesPerYearChart.tsx  TopDriversByWins.tsx  WinsPerNationalityChart.tsx
dashboard/src/pages/: dashboard.tsx  drivers.tsx  races.tsx
dashboard/src/utils/: common.ts
esm_fullstack_challenge/: __init__.py  config.py  main.py
esm_fullstack_challenge/db/: __init__.py  db.py  utils.py
esm_fullstack_challenge/dependencies/: __init__.py  common.py  db.py
esm_fullstack_challenge/models/: __init__.py  utils.py
esm_fullstack_challenge/routers/: __init__.py  basic.py  dashboard.py  drivers.py  races.py  utils.py
scripts/: entrypoint.sh  initiate_db.py
tests/: test_esm_fullstack_challenge.py
